补充了硬件方案

--- a/Cano/现阶段的引脚设计.md
+++ b/Cano/现阶段的引脚设计.md
@@ -1,12 +1,14 @@
-机架(集成PDB):
+机架(集成PDB 大小取决于桨叶 使用5寸机架):
 
-电机():
+补充PDB(额定连续电流要大于150A 支持4S)
+
+电机(2306 2400KV):
 
 电调(电流必须大于电机最大电流 * 1.2-1.5):
 
-电池():
+电池(4s 130C):
 
-桨叶(由电机电流决定):
+桨叶(由电机电流决定 由扭矩决定 这里使用5寸桨):
 
 硬件清单(见上)
 
