重新设定硬件

--- a/Cano/现阶段的引脚设计.md
+++ b/Cano/现阶段的引脚设计.md
@@ -1,14 +1,18 @@
-机架(集成PDB 大小取决于桨叶 使用5寸机架):
+机架(集成PDB 大小取决于桨叶 使用5寸机架 孔位30.5\*30.5):错误
+
+机架(使用ESC集成PDB版 因此机架不集成PDB):X200风火轮165.75 
+
+X 指的是X型 360表示360轴距(电机对角线举例)
 
 补充PDB(额定连续电流要大于150A 支持4S)
 
 电机(2306 2400KV):
 
-电调(电流必须大于电机最大电流 * 1.2-1.5):
+电调(电流必须大于电机最大电流 * 1.2-1.5 使用4in1ESC):135
 
-电池(4s 130C):
+电池(4s 130C):86
 
-桨叶(由电机电流决定 由扭矩决定 这里使用5寸桨):
+桨叶(由电机电流决定 由扭矩决定 这里使用5寸桨 螺距 叶片数):暂定为5\*4.0 5英寸(机架限制) 4.0螺距(决定推力大小)
 
 硬件清单(见上)
 
