成功实现PPM接收 PWM驱动 目前电机还不支持OneShot

--- a/Cano/现阶段的引脚设计.md
+++ b/Cano/现阶段的引脚设计.md
@@ -229,3 +229,85 @@ SBUS必须反相(高电平转换为低电平 低电平转换为高电平)
 对于T8FB 不支持SBUS PPM
 
 T8FB遥控器 摇杆回中不在中位或舵量打不满 舵量偏差较大时 需要校准摇杆
+
+
+
+TIMx->SR状态寄存器 TIM_SR_CC1IF 捕获1中断标志位 即TIMx_CH1产生中断则自动置1
+
+
+
+同一个TIM不能产生同一个DMA_STREAM
+
+---
+
+关于motor
+
+
+
+R8EF 接收机 → PPM 信号 → Nucleo-F401 TIM2_CH1（PA0）
+          ↓
+     PPM 解码（输入捕获）
+          ↓
+PPM_Channels[2]  ← 遥控器油门（CH3）
+          ↓
+   数值映射为 DShot throttle（48~2000）
+          ↓
+ DShot_Send(DSHOT_Mx, value) → 输出到 ESC → 控制电机
+
+
+
+下降沿 → 下降沿
+间隔时间 = 某个通道的脉宽（1000~2000us）
+
+
+
+PPM_Channels[0] → CH1
+PPM_Channels[1] → CH2
+PPM_Channels[2] → CH3 (油门) throttle
+PPM_Channels[3] → CH4
+
+使用uint16_t thr = PPM_GetChannel(2);获取油门 
+
+映射油门为DShot uint16_t dshot = (thr - 1000) * (2000-48) / 1000 + 48;
+
+使用DShot_Send(DSHOT_M1, throttle);将油门发给电机
+
+
+
+循环里读取PPM并输出到ESC
+
+// 获取 CH3（油门）
+uint16_t ppm_throttle = PPM_GetChannel(2);
+
+// 映射成 DShot 值
+uint16_t dshot_throttle =
+    (ppm_throttle - 1000) * (2000 - 48) / (2000 - 1000) + 48;
+
+// 输出到 M1 电机（PA8 → TIM1_CH1）
+DShot_Send(DSHOT_M1, dshot_throttle);
+
+// 你的例子也可以输出到全部电机
+DShot_Send_All(dshot_throttle, dshot_throttle, dshot_throttle, dshot_throttle);
+
+// 你当前已有显示 PPM 的功能
+LogPPMData();
+
+
+
+完整流程
+
+R8EF  →  PA0 (PPM 输入)
+          ↓ TIM2_CH1 捕获
+      PPM_GetChannel(2)  ←—— 读取油门(1000~2000μs)
+          ↓ 映射
+     DShot throttle (48~2000)
+          ↓
+     DShot_Send / Send_All
+          ↓ DMA + TIM1/TIM3 输出
+     ESC（电调） → 电机
+
+
+
+目前实验用电机不支持DShot 现在暂时使用OneShot 待明天新电调调换后进行更换
+
+SimonK **接收端必须是 50Hz PWM**
